# mbpol_cuda_devel

./: CMakeLists.txt  README.md  run_test.cpp  twobodyForce.cu  twobodyForce.h  twobodyForcePolynomial.cu  twobodyForceTest.cu
NN_2L2H2O_poly2d/: 32_2b_nn_single.hdf5  Makefile  NN_2L2H2O_poly2d.cu  NN_2L2H2O_poly2d.in  NN_2L2H2O_poly2d_benchmarking.cu  NN_2L2H2O_poly2d_benchmarking_result.md  README.md  double_precision_keras_prediction.csv  network.cu  python.out  readhdf5.hpp  single_precision_keras_prediction.csv
NN_2L2H2O_poly2d/BenchMarkingInput/: BenchMarking_InputGeneration.py
NN_2L2H2O_poly2d_CPU/: Gfunction.cpp  Gfunction.h  H_ang  H_rad  Makefile  O_ang  O_rad  README.MD  atomTypeID.cpp  atomTypeID.h  keras_gfn_double.csv  readGparams.cpp  readGparams.h  run_bench.x  tester.cpp  tester.in  timestamps.cpp  timestamps.h  utility.cpp  utility.h
Simple_two_layer_NN_model/: README.md
Simple_two_layer_NN_model/CUDNN/: Makefile
Simple_two_layer_NN_model/Python/: neural_net.py  two_layer_net.ipynb
Simple_two_layer_NN_model/Python/.ipynb_checkpoints/: two_layer_net-checkpoint.ipynb
simple_two_layer_NN_model/: CUDNN  README.md
simple_two_layer_NN_model/CUDNN/: network.cu  two_layer_NN.cu
simple_two_layer_NN_model/Python/: README.md
testcase_forCUDA/: 32_2b_nn_double.hdf5  Makefile  README.md  network.cu  readhdf5.hpp  testcase_forCUDA_double  testcase_forCUDA_double.cu  testcase_forCUDA_double.in  testcase_forCUDA_single  testcase_forCUDA_single.cu  testcase_forCUDA_single.in  whichtype.hpp
